...
//Ini juga menggunakan GetX untuk menampilkan dialog konfirmasi setelah operasi berhasil dilakukan.
  Future savedata(String nama, String desc, String lokasi) async {
    if (loginFormKey.currentState!.validate()) {
      loginFormKey.currentState!.save();
      await menucollection.add({"nama": nama, "deskripsi sampah": desc, "Lokasi sampah":lokasi});
      Get.defaultDialog(
        title: "Berhasil",
        middleText: "data telah ditambah",
        onConfirm: () {
          Get.back();
          Get.back();
        },
        textConfirm: "okay",
      );
...
